# small-business-plan-scorer-agent-skill

./: .gitattributes  .gitignore  CLAUDE.md  CROSS-SKILL-CONTRACTS.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml  requirements-optional.txt  requirements.txt
examples/: assumptions.json  plan.json  research.json  score.json
skills/: main.md  sub-improvement-roadmap.md  sub-quality-reviewer.md  sub-requirements-gatherer.md  sub-scoring-engine.md
tests/: conftest.py  test-scenarios.md  test_knowledge_updater.py  test_scoring_engine.py
tools/: __init__.py  knowledge_updater.py  scoring_engine.py
